# RedditCLI

./: README.md  pyproject.toml
src/reddit_cli/: __init__.py  __main__.py  cli.py  const.py  transform.py
src/reddit_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_transform.py
