[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-cli"
version = "0.1.0"
description = "High-signal CLI for Reddit posts, subreddit info and search via the Reddit API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9,<4.0",
]

[project.scripts]
reddit = "reddit_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
